test/valid/57551_power_right_association/power_right_association.mag
-- Author: 57551, Eduardo Proença

-- Tests precedence/right-association of `^`

fun main (_) : Unit -> Unit =
    print(2 ^ -3 ^ 2 * 1)