test/invalid-semantics/fc51601_mult_const_declaration/mult_const_declaration.mag
--- Author: fc51601, José Sousa

const x : Int = 1
const x : Int = 2

fun main (_) : Unit -> Unit =
print(x)